overview: Renable dragging windows on overview title bars.

Change of mind. Mostly a revert of
https://chromium-review.googlesource.com/c/chromium/src/+/911849.

Test: ash_unittests WindowSelectorTest.*
Bug: 825637
Change-Id: I37bead0a8b1d80cd0c89c646feb5af2a1f0ffa1a
Reviewed-on: https://chromium-review.googlesource.com/986942
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546978}
Former-commit-id: 2a18383a5726138114e1d1be8e2d0aa3c9a2d39b